Update description field
CRAN check: The Description field should not start with the package name,
  'This package' or similar.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(person("Tom", "Toner", role = c("aut"),
                     comment = c(ORCID = "0000-0003-1158-8527"))
               )
 Maintainer: Ian Overton <I.Overton@qub.ac.uk>
-Description: eHDPrep is a tool for the preparation and enrichment of health datasets for analysis. It provides functionality for assessing data quality and for improving the reliability and machine interpretability of a dataset. 
+Description: A tool for the preparation and enrichment of health datasets for analysis. Provides functionality for assessing data quality and for improving the reliability and machine interpretability of a dataset. 
      eHDPrep also enables semantic enrichment of a dataset where metavariables are discovered from the relationships between input variables determined from user-provided ontologies.
 License: GPL-3
 Encoding: UTF-8
