--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,8 @@ Maintainer: Ian Overton <I.Overton@qub.ac.uk>
 Description: A tool for the preparation and enrichment of health datasets for analysis. Provides functionality for assessing data quality and for improving the reliability and machine interpretability of a dataset. 
      'eHDPrep' also enables semantic enrichment of a dataset where metavariables are discovered from the relationships between input variables determined from user-provided ontologies.
 License: GPL-3
+URL: https://github.com/overton-group/eHDPrep
+BugReports: https://github.com/overton-group/eHDPrep/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.1
