Add semantic enrichment functionality
- Add IC_threshold in metavariable_info()
- Add metavariable_variable_descendants()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(join_vars_to_ontol)
 export(merge_cols)
 export(metavariable_agg)
 export(metavariable_info)
+export(metavariable_variable_descendants)
 export(mi_content_discrete)
 export(mod_track)
 export(node_IC_zhou)
@@ -180,4 +181,5 @@ importFrom(tidygraph,with_graph)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
+importFrom(tidyr,unnest)
 importFrom(tm,stopwords)
