Add functionality for semantic enrichment
- edge_tbl_to_graph() converts data frame to ontology graph for semantic enrichment
- semantic_enrichment() now accepts csv path or data frame as alternative to graph object
- Update vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compare_info_content)
 export(compare_info_content_plt)
 export(completeness_heatmap)
 export(count_compare)
+export(edge_tbl_to_graph)
 export(encode_as_num_mat)
 export(encode_binary_cats)
 export(encode_cats)
