--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -26,7 +26,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: docker://pandoc/core:2.9
+      - uses: r-lib/actions/setup-pandoc@v2
       - name: Set up R ${{ matrix.r-version }}
         uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
         with:
