--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -38,6 +38,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: r-lib/actions/setup-pandoc@v2
       - uses: r-lib/actions/setup-tinytex@v2
+      - uses: r-lib/actions/setup-r-dependencies@v2
       - run: tlmgr --version
       - name: Set up R ${{ matrix.r-version }}
         uses: r-lib/actions/setup-r@v2
