--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -1,57 +1,3 @@
-# # This workflow uses actions that are not certified by GitHub.
-# # They are provided by a third-party and are governed by
-# # separate terms of service, privacy policy, and support
-# # documentation.
-# #
-# # See https://github.com/r-lib/actions/tree/master/examples#readme for
-# # additional example workflows available for the R community.
-
-# name: R
-
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
-
-# permissions:
-#   contents: read
-
-# jobs:
-#   build-check:
-#     runs-on: ${{ matrix.config.os }}
-    
-#     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
-    
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         config:
-#           - {os: macos-latest,   r: '3.6.0'}
-#           - {os: macos-latest,   r: 'release'}
-#           - {os: windows-latest, r: '3.6.0'}
-#           - {os: windows-latest, r: 'release'}
-#           - {os: ubuntu-latest,   r: '3.6.0'}
-#           - {os: ubuntu-latest,   r: 'release'}
-
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: r-lib/actions/setup-pandoc@v2
-#       - uses: r-lib/actions/setup-tinytex@v2
-#       - run: tlmgr --version
-#       - name: Set up R ${{ matrix.r-version }}
-#         uses: r-lib/actions/setup-r@v2
-#         with:
-#           r-version: ${{ matrix.r-version }}
-#       - name: Install dependencies
-#         uses: r-lib/actions/setup-r-dependencies@v2
-#         with:
-#           extra-packages: any::rcmdcheck
-#           needs: check
-#       - name: Check
-#         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
-#         shell: Rscript {0}
-
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
@@ -86,6 +32,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-pandoc@v2
+      
+      - uses: r-lib/actions/setup-tinytex@v2
 
       - uses: r-lib/actions/setup-r@v2
         with:
