--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -49,5 +49,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          args: 'c("--as-cran")'
+          args: 'c("--no-manual", "--as-cran")'
           build_args: 'c("--compact-vignettes=gs+qpdf")'
