--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
   readr (>= 1.4.0),
   readxl (>= 1.3.1),
   knitr (>= 1.31)
+BuildVignettes: true
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.6.0)
